2do Actualizacion del modal

--- a/index.html
+++ b/index.html
@@ -168,8 +168,17 @@
                 <h3>Polera vue</h3>
                 <h3>Tallas : S - M - L -XL - XXL</h3>
                 <p>antium voluptas at sunt, eius voluptates maxime? Aliquid?</p>
-                 
                 <P>PRECIO $990</P>
+                <select name="" id="">
+                    <option value="" disabled selected>- SELECCIONE LA TALLA -</option>
+                    <option value="">Talla S</option>
+                    <option value="">Talla M</option>
+                    <option value="">Talla L</option>
+                    <option value="">Talla XL</option>
+                    <option value="">Talla XXL</option>
+                </select>
+                <input type="number" placeholder="Cantidad" min="1" max="99">
+                
                 <a href="">Comprar</a>
             </div>
         </div>
